src/objects/PAC__c.object
<CustomObject>
    <fields>
        <fullName>Allocation_Date__c</fullName>
        <label>Allocation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Assigned_Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>PACs</relationshipLabel>
        <relationshipName>PACs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Product</label>
        <referenceTo>zqu__ZProduct__c</referenceTo>
        <relationshipLabel>PACs</relationshipLabel>
        <relationshipName>PACs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Date__c</fullName>
        <label>Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration in Years</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grouping_Field__c</fullName>
        <label>Grouping Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>29</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <formula>Assigned_Product2__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>PACs</relationshipLabel>
        <relationshipName>PACs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unassigned</fullName>
                    <default>true</default>
                    <label>Unassigned</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Period_End_Date__c</fullName>
        <label>Subscription Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Period_Start_Date__c</fullName>
        <label>Subscription Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Period__c</fullName>
        <formula>(RIGHT(TEXT(Subscription_Period_Start_Date__c), 2) + "-" + 
CASE( 
RIGHT(LEFT(TEXT(Subscription_Period_Start_Date__c),7),2), 
"01", "Jan", 
"02", "Feb", 
"03", "Mar", 
"04", "Apr", 
"05", "May", 
"06", "Jun", 
"07", "Jul", 
"08", "Aug", 
"09", "Sep", 
"10", "Oct", 
"11", "Nov", 
"12", "Dec", 
"None" 
) 
+ "-" + LEFT(TEXT(Subscription_Period_Start_Date__c) , 4) 
+ " to " + 
RIGHT( TEXT(Subscription_Period_End_Date__c), 2) + "-" + 
CASE( 
RIGHT(LEFT(TEXT(Subscription_Period_End_Date__c),7),2), 
"01", "Jan", 
"02", "Feb", 
"03", "Mar", 
"04", "Apr", 
"05", "May", 
"06", "Jun", 
"07", "Jul", 
"08", "Aug", 
"09", "Sep", 
"10", "Oct", 
"11", "Nov", 
"12", "Dec", 
"None" 
) 
+ "-" + LEFT(TEXT(Subscription_Period_End_Date__c) , 4) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <formula>Assigned_Product2__r.Unit_of_Measure__c</formula>
        <label>Unit of Measure</label>
        <type>Text</type>
    </fields>
    <label>PAC</label>
    <nameField>
        <displayFormat>PAC-{000000}</displayFormat>
        <label>PAC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PACs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Product__c</columns>
        <columns>Duration__c</columns>
        <columns>Quantity__c</columns>
        <columns>Key__c</columns>
        <columns>Status__c</columns>
        <columns>Assignment_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>